[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/main_screen/guild_house.png" type="Texture" id=1]
[ext_resource path="res://game_script/scene/guild/Story1-1.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/font_menu.tres" type="DynamicFont" id=3]
[ext_resource path="res://game_script/Map/MapButton.tres" type="StyleBox" id=4]
[ext_resource path="res://tutorial/tutorial_canvas.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/mics/npc/receptionist.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/menu.png" type="Texture" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 499, 29, 72, 71 )

[node name="Control" type="Node"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="ReceptButton" type="Button" parent="TextureRect"]
margin_left = 712.0
margin_top = 414.0
margin_right = 1202.0
margin_bottom = 661.0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Label" type="Label" parent="TextureRect/ReceptButton"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
custom_fonts/font = ExtResource( 3 )
text = "Lễ tân"
align = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect/ReceptButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -46.0
margin_bottom = -30.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="BtnOut" type="TextureButton" parent="TextureRect"]
margin_left = 1722.0
margin_top = 46.0
margin_right = 1842.0
margin_bottom = 166.0
mouse_default_cursor_shape = 2
texture_normal = SubResource( 5 )
expand = true

[node name="TutorialCanvas" parent="." instance=ExtResource( 5 )]
